--- a/a-b-o-u-t.html
+++ b/a-b-o-u-t.html
@@ -93,7 +93,7 @@
               <nav
                 class="navigation-links2-nav navigation-links2-root-class-name11"
               >
-                <a href="h-o-m-e.html" class="navigation-links2-navlink">
+                <a href="index.html" class="navigation-links2-navlink">
                   <span>HOME</span>
                 </a>
                 <a href="a-b-o-u-t.html" class="navigation-links2-navlink1">
