--- a/f-e-a-t-u-r-e-s.html
+++ b/f-e-a-t-u-r-e-s.html
@@ -55,7 +55,7 @@
             <nav
               class="navigation-links4-nav navigation-links4-root-class-name15"
             >
-              <a href="h-o-m-e.html" class="navigation-links4-navlink">
+              <a href="index.html" class="navigation-links4-navlink">
                 <span>HOME</span>
               </a>
               <a href="a-b-o-u-t.html" class="navigation-links4-navlink1">
