--- a/d-i-s-c-o-v-e-r.html
+++ b/d-i-s-c-o-v-e-r.html
@@ -61,7 +61,7 @@
             <nav
               class="navigation-links5-nav navigation-links5-root-class-name19"
             >
-              <a href="h-o-m-e.html" class="navigation-links5-navlink">
+              <a href="index.html" class="navigation-links5-navlink">
                 <span>HOME</span>
               </a>
               <a href="a-b-o-u-t.html" class="navigation-links5-navlink1">
